<resources>
    <string name="app_name">Webmo Android App</string>
    <string name="LoginButtonTxt">Login</string>
    <string name="ErrorLogin">falsches Passwort</string>
    <string name="title_activity_meal_plan">Mealplan</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- login -->

    <string name="logged_in_headline">Du bist eingelogged als</string>
    <string name="title_activity_show_meal">ShowMeal</string>
    <string name="title_activity_showMeal">Showmeal</string>

    <!--ShowMeal-->
    <string name="Meal">Essen</string>
    <string name="Price">Preis</string>
    <string name="Type">Art</string>

    <!--MealType-->
    <string name="vegan">vegan</string>
    <string name="vegetarian">vegetarisch</string>
    <string name="withMeat">mit Fleisch</string>

    <!--LoginActivityFirst-->
    <string name="title_activity_login_first">Login</string>
    <string name="usernamelogin">Username</string>
    <string name="PasswordLogin">Password </string>
    <string name="action_login">Login </string>
    <string name="action_loin_to_short">Login short</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short : min 6 </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions." </string>

    <string name="title_activity_login_activityfirst">Login</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>


    <!--ListMeal-->

    <string name="meal1_name">Spaghetti</string>
    <string name="meal2_name">Pizza</string>
    <string name="meal3_name">Currywurst</string>
    <string name="meal4_name">Chicken Teriyaki</string>
    <string name="meal5_name">Pommes Rot Weiß</string>
    <string name="meal6_name">Rindersteak mit Sauce</string>
    <string name="meal7_name">Wildlachs mit Kartoffeln</string>
    <string name="meal8_name">Salat mit Sauce</string>
    <string name="meal9_name">Pizza mit Thunfisch</string>
    <string name="meal10_name">Pizza mit Salami</string>


    <!-- Show_MealPlan'-->

    <string name="Mealplan">Speiseplan</string>
    <string name="Monday">Montag</string>
    <string name="Tuesday">Dienstag</string>
    <string name="Wednesday">Mittwoch</string>
    <string name="Thursday">Donnerstag</string>
    <string name="Friday">Freitag</string>
    <string name="title_activity_main">Speiseplan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menü</string>
    <string name="nav_header_subtitle">Hier finden Sie alles rund um den Speiseplan.</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Navigation'-->
    <string name="Edit">Bearbeiten</string>
    <string name="title_activity_show__detail__meal">Show_Detail_Meal</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
