<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mealplan"
            android:icon="@drawable/ic_menu_mealplan"
            android:title="@string/Mealplan" />
        <item
            android:id="@+id/nav_meal"
            android:icon="@drawable/ic_menu_meal"
            android:title="@string/Meal" />

    </group>

    <item android:title="Admin">
        <menu>

            <item
                android:id="@+id/nav_login"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/title_activity_login_first" />
        </menu>
    </item>

</menu>
