<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMeal">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:layout_marginTop="100dp">

        <TableRow>

            <TextView
                android:id="@+id/Meal_Name_Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Meal"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <EditText
                android:id="@+id/Meal_Name_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint=" "
                android:inputType="textPersonName"
                android:textSize="18dp"

                />

        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/Meal_Price_Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Price"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/Meal_Price_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:hint="  "
                android:inputType="textPersonName"
                android:textSize="18dp" />



        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/Meal_Type_Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/Type"
                android:textSize="18dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/Meal_type_spinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </TableRow>

    </TableLayout>




</android.support.constraint.ConstraintLayout>